# fdf

./: .gitignore  CMakeLists.txt  Makefile  a.out  author  fdf
libft/: Makefile  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  (+22 more)
srcs/: fdf.h  main.c
srcs/Bresenham's algorithm/: init_start_values.c  line.c  put_pixel.c  vert_line.c
srcs/Bresenhams_algorithm/: line.c
srcs/color transformation/: color_delta.c  color_from_arr_to_int.c  color_from_int_to_arr.c  color_inc.c  color_plus_delta_color.c  free_color_and_delta.c
srcs/color_transformation/: color_delta.c  color_from_arr_to_int.c  color_inc.c  color_plus_delta_color.c  color_set.c  free_color_and_delta.c
srcs/control/: control.h  keyboard_color.c  keyboard_projetion.c  push_control.c  push_key.c  push_mouse.c
srcs/draw_map/: draw_map.c
srcs/errors/: read_map_error.c
srcs/map scan/: map_scan.c  map_scan.h  matrix_new.c  read_map.c  string_to_tokens.c  tokens_to_matrix.c
srcs/map_scan/: map_scan.c  matrix_new.c  string_to_tokens.c
srcs/math_func/: ft_abs.c  percentage.c
srcs/matrix_trasformations/: all_trasforms.c  central_projection.c  find_center.c  move.c  resize.c  rotate_around_x.c  rotate_around_y.c  rotate_around_z.c  transform_params_init.c
test_maps/: 21.fdf  3angle.fdf  elem-col.fdf  m1.fdf  skull.fdf  spi.fdf  test.fdf
